section1 still half done

--- a/subway_code/index.html
+++ b/subway_code/index.html
@@ -7,39 +7,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <div id="main">
-            <div id="pg1">
-                <img id="logo" src="subwaylogo1.png" alt="subway logo">
-                <h2>FRESHNESS SERVED DAILY</h2>
-                <h3>Craft your perfect sub from 3750+ options!</h3>
-                <div id="veggies">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                </div>
-                <img id="sub" src="" alt="">
-                <div id="subshadow"></div>
-                <div id="qualities">
-                    <img src="" alt="">
-                    <p>Handcrafted</p>
-                    <img src="" alt="">
-                    <p>Nourishing</p>
-                    <img src="" alt="">
-                    <p>Farm-fresh</p>
-                    <img src="" alt="">
-                    <p>Nutritious</p>
-                </div>
-            </div>
+    <!-- SUB slide -->
+    <div class="item" id="page1">
+        <div id="subtext">
+            <img class="logo" src="/images/subwaylogo1.png" alt="subway logo">
+            <h1>FRESHNESS SERVED DAILY</h1>
+            <h2>Craft your perfect sub from 3750+ options!</h2>
         </div>
+        <img id="sub" src="/images/sub.png" alt="sub sandwich">
+        <div id="veggies">
+            <img id="capsicum1" src="/images/capsicum1.png" alt="capsicum1">
+            <img id="capsicum2" src="/images/capsicum2.png" alt="capsicum2">
+            <img id="onion1" src="/images/onion1.png" alt="onion1">
+            <img id="onion2" src="/images/onion2.png" alt="onion2">
+            <img id="onion3" src="/images/onion3.png" alt="onion3">
+            <img id="onion4" src="/images/onion4.png" alt="onion4">
+            <img id="tomato1" src="/images/tomato1.png" alt="tomato1">
+            <img id="tomato2" src="/images/tomato2.png" alt="tomato2">
+            <img id="capsicum" src="/images/capsicum2.png" alt="capsicum1">
+            <img id="tomato" src="/images/tomato2.png" alt="tomato2">
+            <img id="onion" src="/images/onion4.png" alt="onion4">
+            <img id="onionring" src="/images/onion4.png" alt="onion4">
+    
+        </div>
+        <div id="arrows">
+            <img id="arrowtopright" src="/images/arrow1.svg" alt="arrow">
+            <img id="arrowbottomleft" src="/images/arrow3.svg" alt="arrow">
+            <img id="arrowbottomright" src="/images/arrow4.svg" alt="arrow">
+            <img id="arrowtopleft" src="/images/arrow2.svg" alt="arrow">
+        </div>
+        <img id="handcrafted" src="/images/Handcrafted.svg" alt="handcrafted">
+        <img id="farmfresh" src="/images/Farm-fresh.svg" alt="farmfresh">
+        <img id="nourishing" src="/images/Nourishing.svg" alt="nourishing">
+        <img id="nutritious" src="/images/Nutritious.svg" alt="nutritious">
+    </div> 
+    <div id="section2">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, provident.
+        <a href="brown.html">brown</a>
+    </div>
     </main>
 </body>
 </html>
